# password-manager

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml  tauri-cross-platform.yml
src/: api.ts  auth.ts  main.ts  modalManager.ts  passwordManager.ts  styles.css  toastManager.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20250404090641_create_passwords_table.sql  20250528090507_master_password_hash.sql
src-tauri/src/: argon2_key_derivation.rs  commands.rs  db.rs  lib.rs  main.rs  model.rs
src-tauri/src/tests/: argon2_tests.rs  db_tests.rs  model_tests.rs
