[package]
name = "password-manager"
version = "0.1.0"
description = "A basic Tauri-based password manager"
authors = ["Mahmut Tasar<tasarm7@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/tasarma/password-manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "password_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
log = "0.4"

tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.97"

sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio-rustls", "macros", "sqlite", "migrate", "chrono"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher"] }

argon2 = "0.5.3"
aes-gcm = "0.10.1"
base64 = "0.22.1"
hex = "0.4.3"
rand = "0.9.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3.31"
thiserror = "1.0.50"

[dev-dependencies]
tempfile = "3.20.0"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "test-util"] }
tauri = { version = "2", features = ["test"] }
